--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
 Hello world!
 <br>
-<a href="/redirects-to-ios/page1.html">Go to page1</a>
-<br>
-<a href="/test">Go to test</a>
+<a href="/cart">Go to cart - which is not available in-app</a>
